the part 1 of why did mango do this