@@ -29,9 +29,7 @@ import java.util.*;
 import static com.simibubi.create.content.kinetics.base.DirectionalKineticBlock.FACING;
 
 public class ElectricPumpBlockEntity extends PumpBlockEntity implements IElectric {
-
     public ElectricBlockValues data = new ElectricBlockValues(getPos());
-
 
     public ElectricPumpBlockEntity(BlockEntityType<?> typeIn, BlockPos pos, BlockState state) {
         super(typeIn, pos, state);
@@ -73,7 +71,7 @@ public class ElectricPumpBlockEntity extends PumpBlockEntity implements IElectri
             frontier.add(Pair.of(1, start.getConnectedPos()));
 
             while (!frontier.isEmpty()) {
-                Pair<Integer, BlockPos> entry = frontier.remove(0);
+                Pair<Integer, BlockPos> entry = frontier.removeFirst();
                 int distance = entry.getFirst();
                 BlockPos currentPos = entry.getSecond();
 
@@ -163,8 +161,7 @@ public class ElectricPumpBlockEntity extends PumpBlockEntity implements IElectri
 
         // facing a pump
         if (PumpBlock.isPump(connectedState) && connectedState.getValue(FACING)
-                .getAxis() == face.getAxis() && blockEntity instanceof ElectricPumpBlockEntity) {
-            ElectricPumpBlockEntity pumpBE = (ElectricPumpBlockEntity) blockEntity;
+                .getAxis() == face.getAxis() && blockEntity instanceof ElectricPumpBlockEntity pumpBE) {
             return pumpBE.isPullingOnSide(pumpBE.isFront(blockFace.getOppositeFace())) != pull;
         }
 
@@ -188,8 +185,7 @@ public class ElectricPumpBlockEntity extends PumpBlockEntity implements IElectri
         if (!(blockState.getBlock() instanceof PumpBlock))
             return false;
         Direction front = blockState.getValue(FACING);
-        boolean isFront = side == front;
-        return isFront;
+        return side == front;
     }
 
     //////////////////////
